ispCP ω 1.0.1 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-03-04 Daniel Andreca
	- GUI:
		* Gender not displayed for reseller on order display

2009-03-04 Thomas Häber
	- GUI:
		* Fixed #1719: Error on hosting_plan_edit.php
	- Tools
		* Fixed #1718: tiny CSS bug in omega pma theme

2009-03-03 Benedikt Heintel
	- DISTS:
		* Fixed #1704 (FreeBSD): Error in FreeBSD Proftpd Config

2009-03-03 Thomas Häber
	- GUI:
		* fixed some invalid (hardcoded) HTML
		* code cleanup, typos
		* Fixed #1711: Login page looks wrong
		* fixed decoding problem in order mails of order panel 

2009-03-02 Benedikt Heintel
	- GUI:
		* Fixed #1702: update Net_IDNA and separate it from internal source code (updated to v0.6.2)

2009-03-02 Daniel Andreca
	- GUI:
		* Restore deleted files

2009-03-01 Daniel Andreca
	- TOOLS:
		* Fixed #1620: Request for a new field in "Personal Data": State/Province

2009-03-01 Benedikt Heintel
		* Updated Copyright in all files (commit follow as other changes are made in this files)
		* activated $Id$ for all files (commit follow as other changes are made in this files)

2009-03-01 Thomas Häber
	- TEMPLATES
		* Removed W3C Logos/Links for valid HTML/CSS from errordocs, they aren't useful here -> less traffic & requests
		* Updated stable template (part 2: hosting plan sites)
		* removed unused font "Cocktails", furthermore there is a unexplained copyright status, which may conflict with existing licenses (GPL)

2009-02-28 Daniel Andreca
	- TOOLS:
		* Fixed #1699: Update phpMyAdmin to version 3.1.3

2009-02-28 Thomas Häber
	- LANGUAGES:
		* Fixed some text strings + german translations
	- TEMPLATES:
		* Updated stable template (part 1: login sites)
	- GUI:
		* typos/coding style (orderpanel, README ...)

2009-02-25 Benedikt Heintel
	- DISTROS:
		* Fixed #1697: FreeBSD Patch