@@ -46,4 +46,5 @@
 
 	Action php-fastcgi /php{PHP_VERSION}/php{PHP_VERSION}-fcgi-starter
 	AddType application/x-httpd-php .php .php{PHP_VERSION}
+	DirectoryIndex index.php
 </IfModule>
