@@ -21,4 +21,5 @@
   AddHandler fcgid-script .php .php{PHP_VERSION}
   SocketPath /var/run/fcgidsock
   IPCConnectTimeout 20
+  DirectoryIndex index.php
 </IfModule>
