@@ -63,7 +63,7 @@ SQL_QUERY;
 			$ticket_status, $ticket_reply, $urgency, $ticket_date, $subject, $user_message));
 
 	set_page_message(tr('Your message was sent!'));
-	send_tickets_msg($reseller_id, $user_id, $subject, $user_message, $ticket_reply);
+	send_tickets_msg($reseller_id, $user_id, html_entity_decode($subject, ENT_QUOTES, 'UTF-8'), html_entity_decode($user_message, ENT_QUOTES, 'UTF-8'), $ticket_reply);
 	header("Location: ticket_system.php");
 	exit(0);
 }
